--- a/1.2.01-Demo-GettingStartedWithLibGDX/gradle.properties
+++ b/1.2.01-Demo-GettingStartedWithLibGDX/gradle.properties
@@ -1,3 +1,24 @@
+## Project-wide Gradle settings.
+#
+# For more details on how to configure your build environment visit
+# http://www.gradle.org/docs/current/userguide/build_environment.html
+#
+# Specifies the JVM arguments used for the daemon process.
+# The setting is particularly useful for tweaking memory settings.
+# Default value: -Xmx1024m -XX:MaxPermSize=256m
+# org.gradle.jvmargs=-Xmx2048m -XX:MaxPermSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
+#
+# When configured, Gradle will run in incubating parallel mode.
+# This option should only be used with decoupled projects. More details, visit
+# http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
+# org.gradle.parallel=true
+#Tue Oct 18 09:16:43 BOT 2016
+systemProp.http.proxyPort=8080
 org.gradle.daemon=true
 org.gradle.jvmargs=-Xms128m -Xmx512m
+systemProp.https.proxyHost=proxy
 org.gradle.configureondemand=true
+systemProp.http.nonProxyHosts=*localhost*, 192.168.*, 0.0.0.0 
+systemProp.http.proxyHost=proxy
+systemProp.https.proxyPort=8080
+systemProp.https.nonProxyHosts=*localhost*, 192.168.*, 0.0.0.0 
